---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
---
path: /home/user/project
regex: search pattern
file_pattern: *.txt
total_lines: 26
start_line: 0
end_line: 25
---
file1.txt:1:This is line 1 with search pattern
file2.txt:2:This is line 2 with search pattern
file3.txt:3:This is line 3 with search pattern
file4.txt:4:This is line 4 with search pattern
file5.txt:5:This is line 5 with search pattern
file6.txt:6:This is line 6 with search pattern
file7.txt:7:This is line 7 with search pattern
file8.txt:8:This is line 8 with search pattern
file9.txt:9:This is line 9 with search pattern
file10.txt:10:This is line 10 with search pattern
file11.txt:11:This is line 11 with search pattern
file12.txt:12:This is line 12 with search pattern
file13.txt:13:This is line 13 with search pattern
file14.txt:14:This is line 14 with search pattern
file15.txt:15:This is line 15 with search pattern
file16.txt:16:This is line 16 with search pattern
file17.txt:17:This is line 17 with search pattern
file18.txt:18:This is line 18 with search pattern
file19.txt:19:This is line 19 with search pattern
file20.txt:20:This is line 20 with search pattern
file21.txt:21:This is line 21 with search pattern
file22.txt:22:This is line 22 with search pattern
file23.txt:23:This is line 23 with search pattern
file24.txt:24:This is line 24 with search pattern
file25.txt:25:This is line 25 with search pattern
<truncation>content is truncated to 25 lines, remaining content can be read from path:/tmp/forge_search_truncated.txt</truncation>
